--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="output.css" rel="stylesheet">
     <title>Mon Portfolio - Théa Blachon - Coding & Digital Innovation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/nova-quinta-personal-use" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="flex justify-between items-center px-32 py-28 gap-x-28">
+        <div>
+            <div>
+                <h1>Théa Blachon</h1>
+                <img src="img/titre-section1.png" alt="vague-section1">
+            </div>
+            <div class="flex flex-col items-center gap-y-4">
+            <p>Actuellement en troisième année à l'IIM, où je me spécialise en Coding & Digital Innovation,  j'ai découvert ma véritable passion pour le monde du numérique et de l'innovation, et j'ai travaillé dur pour développer mes compétences dans ce domaine.</p>
+            <img src="img/vague_top.png" alt="vague">
+            <p>Mais mon parcours ne s'arrête pas là. Je suis également très investie dans l'association LDV Esport, où j'occupe actuellement le poste de Responsable Esport, qui consiste à veiller à la bonne entente entre les différentes équipes et les différents staffs, mais également de gérer les tournois.</p>
+            <img src="img/vague_bottom.png" alt="vague">
+            <p>Récemment, j'ai eu la chance de rejoindre Zephyr Esport en tant que support pour l'équipe féminine de League of Legends. C'est une expérience palpitante et exaltante, car je peux combiner ma passion pour les jeux vidéo compétitifs avec des compétences que j'ai développées au cours de mes études. Participer à des compétitions et représenter Zephyr Esport est un honneur, et je suis déterminée à donner le meilleur de moi-même pour notre équipe.</p>
+            </div>
+        </div>
+        <div>
+            <img src="img/img_thea.png" alt="Thea Blachon" class="max-w-none">
+        </div>
+    </section>
+    <section class="px-32">
+        <h2>Mes projets</h2>
+    </section>
 </body>
 </html>
