:art:début section projets

--- a/index.html
+++ b/index.html
@@ -5,8 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="output.css" rel="stylesheet">
     <title>Mon Portfolio - Théa Blachon - Coding & Digital Innovation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/nova-quinta-personal-use" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="flex justify-between items-center px-32 py-28 gap-x-28">
+        <div>
+            <div>
+                <h1>Théa Blachon</h1>
+                <img src="img/titre-section1.png" alt="vague-section1">
+            </div>
+            <div class="flex flex-col items-center gap-y-4">
+            <p>Actuellement en troisième année à l'IIM, où je me spécialise en Coding & Digital Innovation,  j'ai découvert ma véritable passion pour le monde du numérique et de l'innovation, et j'ai travaillé dur pour développer mes compétences dans ce domaine.</p>
+            <img src="img/vague-top.png" alt="vague">
+            <p>Mais mon parcours ne s'arrête pas là. Je suis également très investie dans l'association LDV Esport, où j'occupe actuellement le poste de Responsable Esport, qui consiste à veiller à la bonne entente entre les différentes équipes et les différents staffs, mais également de gérer les tournois.</p>
+            <img src="img/vague-bottom.png" alt="vague">
+            <p>Récemment, j'ai eu la chance de rejoindre Zephyr Esport en tant que support pour l'équipe féminine de League of Legends. C'est une expérience palpitante et exaltante, car je peux combiner ma passion pour les jeux vidéo compétitifs avec des compétences que j'ai développées au cours de mes études. Participer à des compétitions et représenter Zephyr Esport est un honneur, et je suis déterminée à donner le meilleur de moi-même pour notre équipe.</p>
+            </div>
+        </div>
+        <div>
+            <img src="img/img-thea.png" alt="Thea Blachon" class="max-w-none">
+        </div>
+    </section>
+    <section class="px-32">
+        <h2 class="mb-12">Mes projets</h2>
+        <div class="flex flex-col gap-y-12 px-40">
+            <div class="flex justify-around items-center gap-x-16 max-h-full">
+                <img src="img/portfolio-project.png" alt="portfolio">
+                <div class="h-full border border-[#463E95]">
+                    <h3>Portfolio - ancienne version</h3>
+                    <p>Mon ancien portfolio était une vitrine de mes compétences et de mon parcours professionnel, mettant en avant mes réalisations passées, mon style, ma créativité et ma vision dans le domaine du développement web et du design. Bien qu'il soit désormais remplacé par un nouveau portfolio reflétant davantage mon style actuel, mon ancien portfolio reste un témoignage précieux de mon parcours et de ma passion pour le développement web et le design.</p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h3>Ecologica</h3>
+                    <p>Ecologica est un site web conçu dans le but de promouvoir une école dédiée à l'écologie. Ce site informatif présente de manière claire et engageante les programmes éducatifs axés sur la durabilité, les activités environnementales et les valeurs éthiques de l'école. Il offre aux visiteurs un aperçu complet de l'établissement et des opportunités d'apprentissage, le tout dans un format convivial et accessible.</p>
+                </div>
+                <img src="img/ecologica-project.png" alt="ecologica">
+            </div>
+            <div>
+                <img src="img/wikifilm-project.png" alt="wikifilm">
+                <div>
+                    <h3>Crunchyroule - wikifilm</h3>
+                    <p>Le site Wiki de film offre aux amateurs de cinéma une base de données complète et organisée, regroupant des informations détaillées sur une multitude de films, acteurs, réalisateurs, et bien plus encore. Mon objectif était de créer un espace convivial où les cinéphiles peuvent explorer le monde du cinéma, partager des connaissances, et contribuer à une communauté collaborative. Ce projet reflète ma passion pour le cinéma et mon désir de le rendre accessible à tous.</p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h3>Ménagerie du jardin des plantes</h3>
+                    <p>Le site sur la Ménagerie de Paris que j'ai réalisé est une invitation à explorer ce lieu emblématique. Il offre aux visiteurs une expérience virtuelle immersive, mettant en avant la diversité des espèces animales hébergées dans ce parc historique.Ce site vise à sensibiliser le public à la conservation de la biodiversité tout en mettant en valeur le charme unique de la Ménagerie de Paris. C'est un hommage à ce lieu exceptionnel et à sa mission de préservation de la faune mondiale.</p>
+                </div>
+                <img src="img/menagerie-project.png" alt="Menagerie">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
