:art: section mes projets

--- a/index.html
+++ b/index.html
@@ -32,33 +32,33 @@
     <section class="px-32">
         <h2 class="mb-12">Mes projets</h2>
         <div class="flex flex-col gap-y-12 px-40">
-            <div class="flex justify-around items-center gap-x-16 max-h-full">
-                <img src="img/portfolio-project.png" alt="portfolio">
-                <div class="h-full border border-[#463E95]">
-                    <h3>Portfolio - ancienne version</h3>
+            <div class="grid grid-cols-2 gap-x-16">
+                <img src="img/portfolio-project.png" alt="portfolio" class="h-full w-full">
+                <div class="h-full border border-[#463E95] p-7">
+                    <h3 class="mb-1">Portfolio - ancienne version</h3>
                     <p>Mon ancien portfolio était une vitrine de mes compétences et de mon parcours professionnel, mettant en avant mes réalisations passées, mon style, ma créativité et ma vision dans le domaine du développement web et du design. Bien qu'il soit désormais remplacé par un nouveau portfolio reflétant davantage mon style actuel, mon ancien portfolio reste un témoignage précieux de mon parcours et de ma passion pour le développement web et le design.</p>
                 </div>
             </div>
-            <div>
-                <div>
-                    <h3>Ecologica</h3>
+            <div class="grid grid-cols-2 gap-x-16">
+                <div class="h-full border border-[#463E95] p-7 text-end">
+                    <h3 class="mb-1">Ecologica</h3>
                     <p>Ecologica est un site web conçu dans le but de promouvoir une école dédiée à l'écologie. Ce site informatif présente de manière claire et engageante les programmes éducatifs axés sur la durabilité, les activités environnementales et les valeurs éthiques de l'école. Il offre aux visiteurs un aperçu complet de l'établissement et des opportunités d'apprentissage, le tout dans un format convivial et accessible.</p>
                 </div>
-                <img src="img/ecologica-project.png" alt="ecologica">
+                <img src="img/ecologica-project.png" alt="ecologica" class="h-full w-full">
             </div>
-            <div>
-                <img src="img/wikifilm-project.png" alt="wikifilm">
-                <div>
-                    <h3>Crunchyroule - wikifilm</h3>
+            <div class="grid grid-cols-2 gap-x-16">
+                <img src="img/wikifilm-project.png" alt="wikifilm" class="h-full w-full">
+                <div class="h-full border border-[#463E95] p-7">
+                    <h3 class="mb-1">Crunchyroule - wikifilm</h3>
                     <p>Le site Wiki de film offre aux amateurs de cinéma une base de données complète et organisée, regroupant des informations détaillées sur une multitude de films, acteurs, réalisateurs, et bien plus encore. Mon objectif était de créer un espace convivial où les cinéphiles peuvent explorer le monde du cinéma, partager des connaissances, et contribuer à une communauté collaborative. Ce projet reflète ma passion pour le cinéma et mon désir de le rendre accessible à tous.</p>
                 </div>
             </div>
-            <div>
-                <div>
-                    <h3>Ménagerie du jardin des plantes</h3>
+            <div class="grid grid-cols-2 gap-x-16">
+                <div class="h-full border border-[#463E95] p-7 text-end">
+                    <h3 class="mb-1">Ménagerie du jardin des plantes</h3>
                     <p>Le site sur la Ménagerie de Paris que j'ai réalisé est une invitation à explorer ce lieu emblématique. Il offre aux visiteurs une expérience virtuelle immersive, mettant en avant la diversité des espèces animales hébergées dans ce parc historique.Ce site vise à sensibiliser le public à la conservation de la biodiversité tout en mettant en valeur le charme unique de la Ménagerie de Paris. C'est un hommage à ce lieu exceptionnel et à sa mission de préservation de la faune mondiale.</p>
                 </div>
-                <img src="img/menagerie-project.png" alt="Menagerie">
+                <img src="img/menagerie-project.png" alt="Menagerie" class="h-full w-full">
             </div>
         </div>
     </section>
