:art: push section 3 et 4

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.cdnfonts.com/css/nova-quinta-personal-use" rel="stylesheet">
 </head>
 <body>
-    <section class="flex justify-between items-center px-32 py-28 gap-x-28">
+    <section class="flex justify-between items-center px-40 py-28 gap-x-28">
         <div>
-            <div>
+            <div class="mb-4">
                 <h1>Théa Blachon</h1>
                 <img src="img/titre-section1.png" alt="vague-section1">
             </div>
@@ -29,8 +29,9 @@
             <img src="img/img-thea.png" alt="Thea Blachon" class="max-w-none">
         </div>
     </section>
-    <section class="px-32">
-        <h2 class="mb-12">Mes projets</h2>
+    <section class="px-32 pb-28">
+        <h2>Mes projets</h2>
+        <img class="mb-12" src="img/titre-section2.png" alt="titre-section2">
         <div class="flex flex-col gap-y-12 px-40">
             <div class="grid grid-cols-2 gap-x-16">
                 <img src="img/portfolio-project.png" alt="portfolio" class="h-full w-full">
@@ -60,6 +61,54 @@
                 </div>
                 <img src="img/menagerie-project.png" alt="Menagerie" class="h-full w-full">
             </div>
+        </div>
+    </section>
+    <section class="px-32 pb-28">
+        <h2>Mes compétences</h2>
+        <img class="mb-12" src="img/titre-section3.png" alt="titre-section3">
+        <div class="flex items-center gap-x-10 mb-12 px-40">
+            <img src="img/sass.png" alt="sass">
+            <img src="img/tailwind.png" alt="tailwind">
+            <img src="img/css.png" alt="css">
+            <img src="img/vue.png" alt="vue">
+            <p class="text-start">J'ai développé des compétences solides en front-end, notamment en CSS et en SASS. De plus, j'ai exploré les Frameworks comme Tailwind CSS et Vue.js pour créer des interfaces utilisateur modernes et efficaces.</p>
+        </div>
+        <div class="flex items-center gap-x-10 mb-12 px-40">
+            <p class="text-end">J'ai acquis des compétences solides en back-end grâce à PHP et MySQL, tout en utilisant les Frameworks Symfony et Laravel pour simplifier le développement de projets web complexes.</p>
+            <img src="img/symfony.png" alt="symfony">
+            <img src="img/php.png" alt="php">
+            <img src="img/sql.png" alt="sql">
+            <img src="img/laravel.png" alt="laravel">
+        </div>
+        <div class="flex items-center gap-x-10 px-40">
+            <img src="img/figma.png" alt="figma">
+            <img src="img/photoshop.png" alt="photoshop">
+            <img src="img/wordpress.png" alt="wordpress">
+            <img src="img/webflow.png" alt="webflow">
+            <p class="text-start">J'ai acquis des compétences en conception avec Figma et Photoshop pour la modification d'images et la création de maquettes. De plus, j'ai une expertise dans l'utilisation de CMS tels que WordPress et Webflow pour la gestion de contenu de sites web.</p>
+        </div>
+    </section>
+    <section class="flex justify-between items-center px-40 pb-28 gap-x-28">
+        <img src="img/NyAndy-Thea.png" alt="Mon meilleur ami et moi">
+        <div>
+            <div>
+                <h2>Mes passions</h2>
+                <img class="mb-12" src="img/titre-section4.png" alt="titre-section4">
+            </div>
+            <div class="flex flex-col items-center gap-y-4">
+            <p>Ma vie est animée par trois grandes passions : les jeux vidéo compétitifs, l'esport sur League of Legends et Valorant, la culture japonaise ainsi que la musique rock et pop. L'un de mes moments les plus mémorables fut ma participation à la Gamers Assembly, une LAN où j'ai eu le privilège de caster avec mon meilleur ami. Cette expérience a été enrichissante, nous permettant de partager notre passion pour les jeux compétitifs avec un public enthousiaste, tout en vivant l'excitation de l'événement en personne.</p>
+            <img src="img/vague-top.png" alt="vague-top">
+            <p>En parallèle, ma passion pour la musique rock et pop est une source d'inspiration constante de par les mélodies entrainantes et les paroles qui me touchent personnellement.</p>
+            <img src="img/vague-bottom.png" alt="vague-bottom">
+            <p>Je me suis également plongé dans l'univers fascinant des manga et de l'animation japonaise.C'est un monde où l'imagination n'a pas de limites, où des histoires captivantes se mêlent à une esthétique visuelle unique. Les personnages emblématiques et les intrigues profondes ont le pouvoir de me transporter dans des mondes fantastiques. </p>
+            </div>
+        </div>
+    </section>
+    <section class="text-center mb-12">
+        <img src="img/end.png" alt="end" class="img-center">
+        <div class="flex justify-center gap-x-32 mt-4">
+            <a href="https://github.com/EthraDev">Github</a>
+            <a href="https://www.linkedin.com/in/th%C3%A9ablachon/">Linkedin</a>
         </div>
     </section>
 </body>
