:memo:correction formulation d'une phrase

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <img class="mb-12" src="img/titre-section4.png" alt="titre-section4">
             </div>
             <div class="flex flex-col items-center gap-y-4">
-            <p>Ma vie est animée par trois grandes passions : les jeux vidéo compétitifs, l'esport sur League of Legends et Valorant, la culture japonaise ainsi que la musique rock et pop. L'un de mes moments les plus mémorables fut ma participation à la Gamers Assembly, une LAN où j'ai eu le privilège de caster avec mon meilleur ami. Cette expérience a été enrichissante, nous permettant de partager notre passion pour les jeux compétitifs avec un public enthousiaste, tout en vivant l'excitation de l'événement en personne.</p>
+            <p>Ma vie est animée par quatre grandes passions : les jeux vidéo compétitifs, l'esport sur League of Legends et Valorant, la culture japonaise ainsi que la musique rock et pop. L'un de mes moments les plus mémorables fut ma participation à la Gamers Assembly, une LAN où j'ai eu le privilège de caster avec mon meilleur ami. Cette expérience a été enrichissante, nous permettant de partager notre passion pour les jeux compétitifs avec un public enthousiaste, tout en vivant l'excitation de l'événement en personne.</p>
             <img src="img/vague-top.png" alt="vague-top">
             <p>En parallèle, ma passion pour la musique rock et pop est une source d'inspiration constante de par les mélodies entrainantes et les paroles qui me touchent personnellement.</p>
             <img src="img/vague-bottom.png" alt="vague-bottom">
